--- a/src/components/BuyerDashboard/Settings/ReviewsCard/reviewcard.css
+++ b/src/components/BuyerDashboard/Settings/ReviewsCard/reviewcard.css
@@ -1,5 +1,5 @@
 .review-card {
-    max-width: 750px;
+    max-width: 620px;
     width: 100%;
     margin: auto;
     display: flex;
@@ -14,7 +14,7 @@
     margin-bottom: 1rem;
   }
   
-  .card {
+  .card-review-updated {
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -86,7 +86,7 @@
   
   /* Responsive */
   @media (max-width: 480px) {
-    .card {
+    .card-review-updated {
       padding: 0.8rem;
     }
   
