--- a/src/components/BuyerDashboard/Settings/LinkedAccounts/linkedaccounts.css
+++ b/src/components/BuyerDashboard/Settings/LinkedAccounts/linkedaccounts.css
@@ -7,6 +7,7 @@
   justify-content: center;
   max-width: 1400px;
   width: 100%;
+  min-height: 90vh;
 }
 
 
@@ -88,8 +89,11 @@
   border: 1px solid #ccc;
   background-color: white;
   display: flex;
-  max-width: 13%;
-  width: 100%;
+  width: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .connected-btn {
@@ -104,14 +108,14 @@
   background-color: #1dbf73;
   border: none;
   color: white;
-  font-size: 1rem;
+  font-size: 14px;
   border-radius: 4px;
   cursor: pointer;
   display: flex;
   margin-left: auto;
-  justify-content: flex-end;
-  max-width: 13%;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
 }
 
 /* Responsive */
