--- a/src/components/CreateGig/DescriptionEditor/DescriptionEditor.css
+++ b/src/components/CreateGig/DescriptionEditor/DescriptionEditor.css
@@ -1,5 +1,8 @@
+.main-div{
+    max-width: 800px;
+    width: 100%;
+}
 .desc-container {
-  max-width: 700px;
   margin: auto;
   padding: 1.5rem;
   font-family: "Segoe UI", sans-serif;
@@ -62,6 +65,17 @@ hr {
   color: #888;
   text-align: right;
   margin-top: 0.4rem;
+}
+.submit-btn{
+  background-color: black;
+  color: white;
+  padding: 12px 25px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  padding: .75rem 1.5rem;
+  font-weight: bold;
+  margin-left: 22px;
 }
 
 /* ✅ Responsive */
