--- a/src/components/CreateGig/ScopePricing/scopepricing.css
+++ b/src/components/CreateGig/ScopePricing/scopepricing.css
@@ -35,9 +35,11 @@
   background-color: black;
   color: white;
   padding: 12px 25px;
-  border: none;
   cursor: pointer;
-  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  padding: .75rem 1.5rem;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
