--- a/src/app/admin/AdminHome/RevenueUpdates/RevenueUpdates.css
+++ b/src/app/admin/AdminHome/RevenueUpdates/RevenueUpdates.css
@@ -6,7 +6,7 @@
   margin: 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgb(0 0 0 / 0.1);
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
   font-family: "Plus Jakarta Sans", sans-serif !important;
 }
@@ -37,14 +37,16 @@ h2 {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 300;
   user-select: none;
   width: fit-content;
+  margin-left: auto;
 }
 
 .total {
   font-size: 2.5rem;
   margin: 0;
+  font-weight: 100;
 }
 
 .label {
