--- a/src/app/admin/AdminHome/Stats/Dashboard.css
+++ b/src/app/admin/AdminHome/Stats/Dashboard.css
@@ -8,10 +8,13 @@
   margin-bottom: 20px;
   width: 100%;
   max-width: 850px;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
+  
 }
 
 .tp-header {
   position: relative;
+  display: flex;
 }
 
 .tp-subtitle {
@@ -26,13 +29,19 @@
 .tp-bold {
   font-weight: 600;
 }
-
+.tp-header-2{
+    display: flex;
+    flex-direction: column;
+}
 .tp-dropdown {
-  float: right;
-  padding: 6px;
-  margin-top: -40px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
+    cursor: pointer;
+    user-select: none;
+    background: #f3f4f6;
+    border-radius: 5px;
+    width: fit-content;
+    margin-left: auto;
+    padding: .5rem 1rem;
+    font-weight: 300;
 }
 
 .tp-table {
@@ -102,6 +111,7 @@
   margin-bottom: 20px; 
   width: 100%;
   max-width: 450px;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
 }
 
 .ws-subtitle {
