--- a/src/app/admin/AdminHome/EarningsCards/EarningsCards.css
+++ b/src/app/admin/AdminHome/EarningsCards/EarningsCards.css
@@ -7,6 +7,7 @@
   padding: 1rem;
   max-width: 400px;
   width: 100%;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
 }
 
 .card {
@@ -22,6 +23,7 @@
 .header {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .chart-pie {
@@ -90,6 +92,11 @@
   background-color: #e0e7ff;
 }
 
+.info-2{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 @media (min-width: 640px) {
   .container {
     max-width: 600px;
