--- a/src/app/admin/ProfileSetting/profilesetting.css
+++ b/src/app/admin/ProfileSetting/profilesetting.css
@@ -2,13 +2,12 @@
   padding: 2rem 5%;
   max-width: 1000px;
   margin: auto;
-  font-family: Arial, sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif !important;
 }
 
 h2 {
   margin-bottom: 1.5rem;
 }
-
 .card {
   background: #fff;
   border-radius: 8px;
