--- a/src/app/admin/AdminHome/Stats/Dashboard.css
+++ b/src/app/admin/AdminHome/Stats/Dashboard.css
@@ -124,7 +124,7 @@
   background: #fff;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 12px 24px -4px;
   margin-bottom: 20px;
   width: 100%;
   max-width: 450px;
@@ -136,11 +136,16 @@
   font-size: 14px;
   margin-bottom: 5px;
 }
-
+.topScalesScorers{
+  width: 150px;
+  text-align: center;
+  padding-top: 10px;
+}
 .ws-title {
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
   margin: 0;
+  margin-bottom: 4px;
 }
 
 .ws-chart {
