--- a/src/components/SellerDashboard/Services/Services.css
+++ b/src/components/SellerDashboard/Services/Services.css
@@ -76,10 +76,12 @@
 .badge {
   background-color: #204ecf;
   color: white;
-  padding: 2px 6px;
+  padding: 1px 7px;
   border-radius: 50%;
   font-size: 12px;
-  margin-left: 4px;
+  margin-left: 6px;
+  width: 15px;
+  height: 15px;
 }
 
 .gigs-panel {
